--- a/_scss/theme.scss
+++ b/_scss/theme.scss
@@ -10,6 +10,7 @@ $color-background: white;
 $color-primary: black;
 $color-secondary: #fcd731;
 $color-light: #9a9a9a;
+$color-lighter: #eeeeee;
 
 // Standard thickness for accents such as link
 // underlining and navbar separators
