--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -298,7 +298,6 @@ tbody tr:nth-child(odd) th {
 
 /* Related posts */
 .related {
-  padding-bottom: 2rem;
   border-top: 1px solid #eee;
 }
 .related-posts {
